--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">About the project</h2>
+                <h2 class="section-heading">About the archive</h2>
                 <hr class="light">
-                <p class="text-faded">The people and planet project is a growing archive of story maps or digital stories that combine maps, text and multimedia to define key concepts relating to nature, people and justice.</p>
+                <p class="text-faded">The people and planet archive is a growing list of story maps or digital stories that combine maps, text and multimedia to define key concepts relating to nature, people and justice.</p>
                 <p class="text-faded">This is an educational tool developed by environmental justice scholars for anyone and anybody who wants to learn about equity-conscious environmentalism and actionable science.</p>
                 <p class="text-faded">To use the archive, hover over the images below and click on key concepts to learn their definitions and history through story maps.</p>
                 <p class="text-faded"> </p>
