--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
                         <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
+                <a href="https://storymaps.arcgis.com/stories/b4b113502bb54eb7b5118192e2018065" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
