--- a/_includes/services.html
+++ b/_includes/services.html
@@ -27,14 +27,14 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>How to</h3>
-                    <a href="" class="text-muted" target="_blank">Curious about story maps? Learn how to make your own by clicking here.</a>
+                    <a href="https://nrca.uconn.edu/eds/" class="text-muted" target="_blank">Curious about digital stories? If you're a student or a teacher and would like to learn more, click here to check out the UConn Eco-Digital Storytelling course.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>News</h3>
-                    <a href="https://news.extension.uconn.edu/" class="text-muted" target="_blank">Find out other ways in which UConn educators translate science into action.</a>
+                    <h3>Other stories</h3>
+                    <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">Click here to check outher UConn stories about the environment.</a>
                 </div>
             </div>
         </div>
