--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,16 +11,16 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
-                    <h3>Creator</h3>
-                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">Dr. Mayra Rodríguez is an educator in Urban and Community Forestry at UConn Extension.</a>
+                    <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Inspired by</h3>
+                    <a class="text-muted" target="_blank">The archive's name was inspired by Leah Thomas' book "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Inspired by</h3>
-                    <a href="https://www.greengirlleah.com/" class="text-muted" target="_blank">The archive's name was inspired by Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</a>
+                    <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
+                    <h3>Creator</h3>
+                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">Dr. Mayra Rodríguez is an educator in Urban and Community Forestry at UConn Extension.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
