--- a/_includes/services.html
+++ b/_includes/services.html
@@ -20,7 +20,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
                     <h3>Creator</h3>
-                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">Dr. Mayra Rodríguez is an educator in Urban and Community Forestry at UConn Extension.</a>
+                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">This archive was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry at UConn Extension.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
