--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">About the archive</h2>
                 <hr class="light">
                 <p class="text-faded">The people and planet archive is a growing list of digital stories that combine text and multimedia to define key concepts relating to nature, people and justice.</p>
-                <p class="text-faded">This is an educational repository informed by environmental justice scholars at the University of Connecticut (UConn). The archive can be used for virtual or face-to-face learning in both formal and informal educational environments, and by anyone and anybody who wants to learn about just environmentalism.</p>
+                <p class="text-faded">This is an educational repository informed by educators at the University of Connecticut (UConn). The archive can be used for virtual or face-to-face learning in both formal and informal educational environments, and by anyone and anybody who wants to learn about just environmentalism.</p>
                 <p class="text-faded">To use the archive, hover over the images below and click on key concepts to learn their definitions and history through digital stories.</p>
                 <p class="text-faded"> </p>
             </div>
