--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Any requests? Suggest new story map concepts.</h2>
+                <h2 class="section-heading">Suggest new story map concepts.</h2>
                 <hr class="primary">
-                <p href="mailto:mayra.rodriguez_gonzalez@uconn.edu">Click here to email the creator.</p>
+                <p href="mailto:mayra.rodriguez_gonzalez@uconn.edu">Click here to email a request.</p>
                 <p></p>
     </div>
 </section>
