--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,8 +33,8 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Inspired by</h3>
-                    <p class="text-muted" target="_blank"><font size="-1">The archive is named after Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
+                    <h3>Inspiration</h3>
+                    <p class="text-muted" target="_blank"><font size="-1">This archive is named after Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
                 </div>
             </div>
         </div>
