--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,23 +18,23 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
+                    <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary"></i>
+                    <h3>Inspiration</h3>
+                    <p class="text-muted" target="_blank"><font size="-1">This archive is named after Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Other stories</h3>
                     <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">If you're interested in other digital storytelling, click here to explore the story maps by UConn's Center for Land use Education and Research.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>How to</h3>
                     <a href="https://nrca.uconn.edu/eds/" class="text-muted" target="_blank">If you're a student or a teacher and would like to learn how to create digital stories, click here to learn about the UConn Eco-Digital Storytelling program.</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Inspiration</h3>
-                    <p class="text-muted" target="_blank"><font size="-1">This archive is named after Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
                 </div>
             </div>
         </div>
