--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -42,21 +42,9 @@
                     </div>
                 </a>
             </div>
-                        <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Environmental Racism
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -68,35 +56,11 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Engineering for Human Rights
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Energy Justice
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/8.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Equitable Resilience
+                                Just Transition
                             </div>
                         </div>
                     </div>
@@ -104,59 +68,11 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/9.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Redlining
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/10.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Luxury Effect
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/11.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Green Gentrification
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/12.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/17.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
                                 Tree Equity
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/13.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Supermarket Redlining
                             </div>
                         </div>
                     </div>
@@ -176,7 +92,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/15.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/18.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -192,31 +108,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Indigenous Environmentalism
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/17.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
                                 Decolonial Environmentalism
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/18.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                Environmental Conflict
                             </div>
                         </div>
                     </div>
