--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About the archive</h2>
                 <hr class="light">
-                <p class="text-faded">The people and planet archive is a growing list of digital stories that combine text and multimedia to define key concepts relating to nature, people and justice. The archive also center Hispanic, Latina, and Women Of Color who have been key figures in promoting environmental justice.</p>
+                <p class="text-faded">The people and planet archive is a growing list of digital stories that combine text and multimedia to describe key movements behind the fight for justice for both people and the planet. The archive also centers Hispanic, Latina, and Women Of Color who have been key figures in promoting environmental justice.</p>
                 <p class="text-faded">The archive can be used for virtual or face-to-face learning in both formal and informal educational environments, and by anyone and anybody who wants to learn about just environmentalism.</p>
                 <p class="text-faded">me To use the archive, hover over the images below and click on key concepts to learn their definitions and history through digital stories.</p>
                 <p class="text-faded"> </p>
